fix apis
